Resolve QA findings for opt-in Kafka Streams DSL Dead Letter Queue
Addresses 36 QA findings (5 Critical, 19 Major, 11 Minor, 1 Info) against
the opt-in DSL DLQ feature. 33 resolved with static + runtime verification;
3 documented-excluded with AAP citations. No change to the legacy KIP-1034
global-config path (regression-protected) or to non-opted topologies.

Core code (streams/src/main):
- KStreamImpl/KStream: withDeadLetterQueue default method now throws
  UnsupportedOperationException instead of a silent no-op (P4-02); reject a
  DLQ topic equal to an originating source topic to guard against recursion
  (P16-03).
- Node-lineage scoping: ProcessorNode, InternalTopologyBuilder,
  DeadLetterQueueGraphNode, and DeadLetterQueueInstaller now resolve
  processing/production DLQ policy by processor node identity
  (context.processorNodeId()) instead of source topic. Fixes sibling-branch
  leakage and late-Pattern proc/prod routing (P4-01, P16-01, P16-02).
- DeadLetterQueueExceptionHandlerDecorator: reject null delegate responses
  consistently across deserialization/processing/production (P5-02).
- DlqRecordBuilder/DeadLetterQueueOptions: truncate-AND-annotate value
  payloads (dlq.value.truncated + dlq.value.original.size), bound the total
  key+value payload to maxRecordSize, and truncate exception messages on a
  Unicode code-point boundary so surrogate pairs are never split
  (P5-03, P16-04, P16-05).
- Observability: dlq-records-sent-total now increments only in the
  RecordCollectorImpl.doSend producer-ack success branch (ack-based count),
  and the per-failure WARN uses attempt semantics ("Routing a failed
  record ...") rather than claiming a confirmed write
  (RecordDeserializer, ProcessorNode, StreamTask, RecordCollectorImpl,
  DeadLetterQueueObserver, TaskMetrics, ActiveTaskCreator) (P5-05, P9-02).
- DeadLetterQueueInstaller returns an unmodifiable options map (P4-03).

Documentation (docs/streams):
- dsl-api.html, config-streams.html, upgrade-guide.html corr